select public and private meal plans with and without a query, and change mealname
